test/compilable/pull6815.d
/* REQUIRED_ARGS: -inline -Icompilable/extra-files
 */

void b()
{
    import e6815 : e;
    e("");
}
