test/fail_compilation/fail4245b.d
// REQUIRED_ARGS: -d
// 4245
void fail4245()
{
    {
        typedef int Foo;
    }
    {
        typedef int Foo;
    }
}
